--- a/.config/com.rh-autoconnect.plist
+++ b/.config/com.rh-autoconnect.plist
@@ -4,9 +4,20 @@
     <dict>
         <key>Label</key>
         <string>com.rh-autoconnect.app</string>
-        <key>Program</key>
-        <string>/Users/daoneill/src/rh-otp-auto-connect/vpn-connect</string>
+        <key>ProgramArguments</key>
+        <array>
+            <string>/bin/bash</string>
+            <string>/Users/daoneill/src/rh-otp-auto-connect/vpn-connect</string>
+        </array>
         <key>RunAtLoad</key>
+        <true/>
+        <key>WorkingDirectory</key>
+        <string>/Users/daoneill/src/rh-otp-auto-connect/</string>
+        <key>StandardErrorPath</key>
+        <string>/tmp/mycommand.err</string>
+        <key>StandardOutPath</key>
+        <string>/tmp/mycommand.out</string>
+        <key>AbandonProcessGroup</key>
         <true/>
     </dict>
 </plist>
