--- a/.config/autostart/otp-service.desktop
+++ b/.config/autostart/otp-service.desktop
@@ -2,7 +2,7 @@
 Name=Connect OTP service at login
 GenericName=otp-start
 Comment=Run otp at login
-Exec=bash -c 'cd $HOME/src/otpanswer && /usr/bin/uvicorn main:app --reload'
+Exec=bash -c 'cd $HOME/src/rh-otp-auto-connect && python3 -m uvicorn main:app --reload'
 Terminal=true
 Type=Application
 X-GNOME-Autostart-enabled=true
