Remove deprecated macOS and Linux autostart configurations; introduce systemd service for OTP auto-connect and update related scripts for improved functionality and logging. Remove deprecated autostart and plist files; implement systemd service for OTP auto-connect and enhance credential retrieval methods in the application. Update GitHub Actions workflow to disable JSCPD, MyPy, Pylint, and Hadolint validations; refactor main.py for improved readability and consistency in string formatting; enhance error logging; and modify vpn-connect script for better variable handling.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,9 @@ jobs:
     uses: dmzoneill/dmzoneill/.github/workflows/dispatch.yaml@main
     with:
       basic: "true"
+      VALIDATE_JSCPD: "false"
+      VALIDATE_PYTHON_MYPY: "false"
+      VALIDATE_PYTHON_PYLINT: "false"
+      VALIDATE_DOCKERFILE_HADOLINT: "false"
+      VALIDATE_JAVASCRIPT_STANDARD: "false"
+      VALIDATE_MARKDOWN: "false"
