--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,26 @@ hotp-secret
 username
 **/__pycache__/**
 associate-password
-.venv
+.venv# AI tool configurations
+.claude/
+.cursor/
+.codex/
+.opencode/
+.gemini/
+.aider*
+.cody/
+.tabnine/
+.windsurf/
+.devai/
+.bolt/
+.v0/
+.lovable/
+.codeium/
+CLAUDE.md
+GEMINI.md
+.cursorrules
+.cursorignore
+opencode.json
+copilot-instructions.md
+.github/copilot-instructions.md
+.github/hooks/
